Added new blog entry

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -105,3 +105,44 @@ body hgroup {
     width: 100px;
   }
 }
+
+.ordered-list, .unordered-list{
+  margin-left: 40px;
+}
+
+a.github{
+
+    span{
+          background-image: url('/images/github-icons.png');
+    background-position: 5px 0px;
+    background-repeat:no-repeat;
+    padding-left: 30px;
+    }
+
+    text-align: left;
+    position: relative;
+    background-color: #F8F8F8;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#dedede));
+    background-image: -moz-linear-gradient(top,#fff,#dedede);
+    background-image: -o-linear-gradient(top,#fff,#dedede);
+    background-image: -ms-linear-gradient(top,#fff,#dedede);
+    background-image: linear-gradient(top,#fff,#dedede);
+    border: #CCC solid 1px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    color: #333;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    max-width: 98%;
+    overflow: hidden;
+    border-image: initial;
+    display: inline-block;
+    margin-bottom: 8px;
+    line-height: 26px;
+    text-decoration: none;
+    padding: 4px 6px;
+}
